# GameOne

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  class_diagram.drawio  clear.sh  fetch.sh  fullrebuild.sh  generate.sh  rebuild.sh  restart.sh  test
resurces/Asset/Animation/: EnemyDamageAnimation.json  EnemyExplosionAnimation.json  EnemyIdleAnimation.json  MissleExplosionAnimation.json
resurces/Asset/Entity/: EnemyEntity.json  MissleEntity.json  PlayerShipEntity.json
resurces/Asset/Image/: BackgroundImage1.json  BackgroundImage2.json  BackgroundImage3.json  BackgroundImage4.json  BackgroundImage5.json  BackgroundImage6.json  BackgroundImage7.json  BackgroundStarsImage1.json  BackgroundStarsImage2.json  BackgroundStarsImage3.json  BackgroundStarsImage4.json  BulletImage.json  EnemyShipImage.json  MissleImage.json  PlayerShipImage.json
resurces/Asset/UI/: IntegrityWidget.json  MenuButtonStyle.json  OptionsMenuWidget.json  PauseMenuWidget.json  ScoreWidget.json
resurces/Asset/World/: BackgroundAsset.json  BackgroundStars1Asset.json  BackgroundStars2Asset.json  BackgroundStars3Asset.json  BackgroundStars4Asset.json  DefaultControlsConfig.json  GameWorldAsset.json
resurces/Config/: ControlsConfig.json
resurces/configuration/: system_settings.json
src/: CMakeLists.txt  main.cpp
src/cpp/: Constants.cpp  Contants.cpp
src/cpp/Game/: BottomBorder.cpp  Bullet.cpp  Enemy.cpp  Explosion.cpp  PlayerController.cpp  PlayerShip.cpp  SideBorder.cpp
src/cpp/GameBase/: Background.cpp  BackgroundLayer.cpp  BaseController.cpp  Entity.cpp  GameState.cpp  GameWorld.cpp  PauseState.cpp  PlayerController.cpp  Scenario.cpp
src/cpp/GameSystem/: AppInstance.cpp  BaseAnimation.cpp  BaseAppState.cpp  Collider.cpp  ConfigManager.cpp  EventManger.cpp  Font.cpp  Image.cpp  InputManager.cpp  PrototypeHolder.cpp  Renderer.cpp  ResurceManager.cpp  SoundManager.cpp  TextBlock.cpp  Texture.cpp
src/cpp/UI/: ButtonActionHolder.cpp  Canvas.cpp  CanvasSlot.cpp  HUD.cpp  IntegrityWidget.cpp  Menu.cpp  MenuButton.cpp  MenuButtonBase.cpp  ScoreWidget.cpp  SubMenu.cpp
src/include/: Constants.h  Types.h  types.h
src/include/Game/: BottomBorder.h  Bullet.h  Enemy.h  Explosion.h  PlayerController.h  PlayerShip.h  SideBorder.h
src/include/GameBase/: Background.h  BackgroundLayer.h  BaseController.h  Entity.h  GameState.h  GameWorld.h  PauseState.h  PlayerController.h  Scenario.h
src/include/GameSystem/: AppInstance.h  BaseAnimation.h  BaseAppState.h  Collider.h  ConfigManager.h  EventManager.h  Exceptions.h  Font.h  Image.h  InputManager.h  PrototypeHolder.h  Renderer.h  ResurceManager.h  SoundManager.h  TextBlock.h  Texture.h
src/include/UI/: ButtonActionHolder.h  Canvas.h  CanvasSlot.h  HUD.h  IntegrityWidget.h  Menu.h  MenuButton.h  MenuButtonBase.h  ScoreWidget.h  SubMenu.h
